NXP: kernel add SFP I2C definitions
git-svn-id: http://192.168.42.160/software/main@23031 ce24552a-085e-4656-8849-d4bfd34db3c6

--- a/arch/arm/boot/dts/imx6ull-14x14-siklu.dts
+++ b/arch/arm/boot/dts/imx6ull-14x14-siklu.dts
@@ -189,6 +189,10 @@
 		compatible = "ti,tmp421";
 		reg = <0x4c>;
 	};
+	sfp10G@50 {   /* siklu SFP 10G/1G */
+		compatible = "siklu,sfp10G";
+		reg = <0x50>;
+	};
 };
 
 
